--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GDS3710_Interface",
+  "name": "@troykelly/gds3710",
   "version": "0.1.0",
   "description": "For connecting to the GDS3710",
   "main": "index.js",
